// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > props > :body[function] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      <div
        class="custom-body"
      >
        自定义内容
      </div>
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :body[string] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :closeBtn[boolean] true shows close button 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <div
      class="t-drawer__close-btn"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="close"
        >
          <path
            d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :footer[boolean] true shows default footer 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :header[boolean] false should hide header 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :header[string] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <div
      class="t-drawer__header"
    >
      标题
    </div>
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :mode[overlay/push] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :mode[overlay/push] 2`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :placement[left/right/top/bottom] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :placement[left/right/top/bottom] 2`] = `
<div
  class="t-drawer t-drawer--left"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--left"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-end;"
      >
        <!---->
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :placement[left/right/top/bottom] 3`] = `
<div
  class="t-drawer t-drawer--top"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--top"
    style="height: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-end;"
      >
        <!---->
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :placement[left/right/top/bottom] 4`] = `
<div
  class="t-drawer t-drawer--bottom"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--bottom"
    style="height: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-end;"
      >
        <!---->
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :showInAttachedElement[boolean] 1`] = `
<div
  class="t-drawer t-drawer--right t-drawer--attach"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :showOverlay[boolean] false hides mask 1`] = `
<div
  class="t-drawer t-drawer--right t-drawer--without-mask"
  tabindex="0"
>
  <!---->
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Drawer > props > :sizeDraggable[boolean] 1`] = `
<div
  class="t-drawer t-drawer--right"
  tabindex="0"
>
  <div
    class="t-drawer__mask"
  />
  <div
    class="t-drawer__content-wrapper t-drawer__content-wrapper--right"
    style="width: 300px;"
  >
    <!---->
    <!---->
    <div
      class="t-drawer__body narrow-scrollbar"
    >
      这是一段内容
    </div>
    <div
      class="t-drawer__footer"
    >
      <div
        style="display: flex; justify-content: flex-start;"
      >
        <button
          class="t-button t-button--variant-base t-button--theme-primary t-button--shape-rectangle t-drawer__confirm"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            确认
          </span>
        </button>
        <button
          class="t-button t-button--variant-base t-button--theme-default t-button--shape-rectangle t-drawer__cancel"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消
          </span>
        </button>
        <!---->
      </div>
    </div>
    <div
      style="z-index: 1; position: absolute; background: transparent; left: 0px; width: 16px; height: 100%; cursor: col-resize;"
    />
  </div>
</div>
`;
